# lancedb-csharp

./: .gitignore  CONTRIBUTING.md  README.md  build.cmd  build.sh  lancedb-csharp.sln  lancedb-csharp.slnx  test.cmd  test.sh
.github/workflows/: build.yml  publish.yml  (+1 more)
benchmark/: Program.cs  README.md  benchmark.csproj
ci/: nuget.config
pinvoke/: Cargo.toml
pinvoke/src/: connection.rs  ffi.rs  lib.rs  macros.rs  query.rs  table.rs
pinvoke/tests/: connection_tests.rs  ffi_tests.rs  ffi_util_tests.rs  query_tests.rs  table_tests.rs
pinvoke/tests/common/: mod.rs
src/: ApproxMode.cs  ArrowCDataHelper.cs  ArrowExportHelper.cs  AsyncRecordBatchReader.cs  BadVectorHandling.cs  Connection.cs  ConnectionHandle.cs  ConnectionOptions.cs  DistanceType.cs  Expr.cs  FTSQuery.cs  FullTextQuery.cs  HybridQuery.cs  Index.cs  IndexConfig.cs  IndexInfo.cs  IndexStatistics.cs  IndexType.cs  LanceDbException.cs  LsmWriteSpec.cs  MergeInsertBuilder.cs  NativeCall.cs  NativeLibrary.cs  OptimizeStats.cs  Query.cs  QueryBase.cs  QueryHandle.cs  RustStringHandle.cs  SqlValue.cs  Table.cs  TableHandle.cs  TableStatistics.cs  TagInfo.cs  TakeQuery.cs  VectorQuery.cs  VectorQueryHandle.cs  VectorValidator.cs  VersionInfo.cs  lancedb.csproj
tests/: ConnectionTests.cs  ExprExecutionTests.cs  ExprTests.cs  FtsQueryStringTests.cs  FullTextQueryExecutionTests.cs  FullTextQueryTests.cs  HybridQueryTests.cs  IndexTypeTests.cs  LsmWriteSpecTests.cs  QueryExecutionTests.cs  RerankerTests.cs  SearchEntryPointTests.cs  SqlValueTests.cs  TableTests.cs  TestFixture.cs  TestHelpers.cs  tests.csproj
(+24 files in other folders)
