[package]
name = "lancedb-pinvoke"
version = "0.0.1"
description = "P/Invoke for LanceDB"
rust-version = "1.93.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lancedb = "0.26.2"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
libc = "0.2"
arrow-schema = "57"

