[package]
name = "lancedb-ffi"
version = "0.0.0" # dummy version
description = "C-compatible FFI bindings for the LanceDB Rust crate"
rust-version = "1.93.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lancedb = "0.26.2"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
arrow-schema = "57"
arrow-ipc = "57"
arrow-array = "57"
serde_json = "1"
chrono = "0.4"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

