[package]
name = "lancedb-ffi"
version = "0.0.0" # dummy version
description = "C-compatible FFI bindings for the LanceDB Rust crate"
rust-version = "1.93.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lancedb = "0.26.2"
lance-namespace = "=2.0.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
libc = "0.2"
arrow-schema = "57"
arrow-array = "57"
arrow-data = "57"
arrow-select = "57"
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"
chrono = "0.4"
futures = "0.3"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3"

